<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".Activities.MovieDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/llHor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/moviePoster"
                    android:layout_width="@dimen/layout_width_movie_image"
                    android:layout_height="@dimen/layout_height_movie_image"
                    android:contentDescription="@string/content_description"
                    android:scaleType="fitXY" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/layout_height_movie_image"
                    android:layout_marginLeft="@dimen/activity_horizontal"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movieTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold"
                        tools:text="Venum" />

                    <TextView
                        android:id="@+id/movieReleaseDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="italic"
                        android:layout_marginTop="8dp"
                        tools:text="15/08/2018" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/movieRateLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/activity_horizontal"
                            android:text="@string/rating_label"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/movieRating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="8.2/10" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/redFavorite"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/llHor"
                android:layout_marginRight="@dimen/activity_horizontal"
                android:src="@drawable/ic_favorite_red_800_24dp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/whiteFavorite"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/llHor"
                android:layout_marginRight="@dimen/activity_horizontal"
                android:src="@drawable/ic_favorite_border_grey_500_24dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/movieOverviewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llHor"
                android:layout_marginTop="@dimen/activity_vertical"
                android:text="@string/overview_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieOverview"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movieOverviewLabel"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/movieOverview"
                android:layout_marginTop="9dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/movieTrailersLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/separator"
                android:layout_marginTop="@dimen/activity_vertical"
                android:text="@string/trailers_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:layout_centerHorizontal="true"
                android:id="@+id/recyclerView_trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movieTrailersLabel"></android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/noFoundTrailersText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/recyclerView_trailers"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/activity_horizontal"
                android:text="@string/error_trailer"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorError"
                android:visibility="gone" />

            <View
                android:id="@+id/separators"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/noFoundTrailersText"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/movieReviewsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/separators"
                android:layout_marginTop="@dimen/activity_vertical"
                android:text="@string/review_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:layout_centerHorizontal="true"
                android:id="@+id/recyclerView_reviews"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movieReviewsLabel"></android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/noFoundReviewsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movieReviewsLabel"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/activity_horizontal"
                android:text="@string/error_review"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorError"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>
</FrameLayout>